@@ -224,6 +224,6 @@ Test Suite
  XmlTests
  ......
 
-Time: 52 seconds
+Time: 51 seconds
 
 OK (756 tests, 1057 assertions)
