@@ -45,7 +45,6 @@
  *          - newsgroups = (optional) newsgroup(s) to post to
  *          - followupto = (optional) address(es) to follow up to
  *          - extra = (optional) extra tags for the href link
- * @param object $smarty Smarty object
  * @param object $template template object
  * @return string 
  */
